<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".TravelDistance">

<!--    <RelativeLayout-->
<!--        android:layout_weight="3"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        android:padding="20dp">-->

<!--        <TextView-->
<!--            android:id="@+id/travel_distance_title"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_centerInParent="true"-->
<!--            android:fontFamily="@font/poppins_semibold"-->
<!--            android:text="@string/how_far_are_you_willing_to_journey"-->
<!--            android:textAppearance="@style/TextAppearance.AppCompat.Large"-->
<!--            android:textColor="@color/colorPrimaryDark"-->
<!--            android:textSize="36sp" />-->

<!--    </RelativeLayout>-->

<!--    <SeekBar-->
<!--        android:id="@+id/seekBar2"-->
<!--        style="@style/Widget.AppCompat.SeekBar.Discrete"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_weight="1"-->
<!--        android:max="10"-->
<!--        android:progress="2" />-->

    <RelativeLayout
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="20dp">

        <TextView
            android:id="@+id/home_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/from_where"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="36sp" />

    </RelativeLayout>

    <GridLayout
        android:id="@+id/food_type_grid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:columnOrderPreserved="false"
        android:alignmentMode="alignMargins"
        android:columnCount="1"
        android:rowCount="2"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/currentLocationBtn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="16dp"
            app:cardBackgroundColor="@color/orange"
            app:cardCornerRadius="8dp"
            app:cardElevation="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_current_location"
                android:fontFamily="@font/poppins_medium"
                android:layout_gravity="center_horizontal|center_vertical"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/searchLocationBtn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_for_a_location"
                android:fontFamily="@font/poppins_medium"
                android:layout_gravity="center_horizontal|center_vertical"
                android:textColor="@color/orange"
                android:textSize="24sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

    </GridLayout>


</LinearLayout>